[package]
name = "track_mapper"
version = "0.1.0"
authors = ["Oleg Ermakov <oleg.ermakov@fogstream.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.0"
image = "0.23"
num-complex = "0.2.3"
lab = "0.7.2"
delta_e = "0.2"
tera = "1.0.1"
ndarray = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
telegram-bot = "0.8.0"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
reqwest = "0.10.9"
futures = "0.3"
config = "0.10"
